chore: GenZGC is default now